--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </header>
 
     <section>
-        <div>
+        <div id="dados">
             <p>início:
-                <input type="number" name="txtici" id="txtici">
+                <input type="number" name="inicio" id="txti">
             </p>
 
             <p>Fim:
-                <input type="number" name="txtfim" id="txtfim">
+                <input type="number" name="fim" id="txtf">
             </p>
 
             <p>Passo:
-                <input type="number" name="txtpas" id="txtpas">
+                <input type="number" name="passo" id="txtp">
             </p>
 
             <p>
@@ -32,7 +32,7 @@
         </div>
 
         <div id="res">
-            Preencha os dado acima para ver o resultado!
+            Preparando a Contagem...
         </div>
 
     </section>
